<resources>
    <string name="app_name">Final Project</string>
    <string name="title">Aviation Stack Flight Tracker</string>
    <string name="date">Departure Date: </string>
    <string name="airport">Departure Airport: </string>
    <string name="result">Flight Results: </string>
    <string name="airline">Airline</string>
    <string name="fNumber">Flt#</string>
    <string name="arrAirport">Arr#</string>
    <string name="fStatus">Status</string>
    <string name="depTime">Dep.</string>
    <string name="arrTime">Arr.</string>

    <string name="titleFavorite">Flight Favorite Lists</string>
    <string name="addButton">Add to Favorite Lists</string>
    <string name="removeButton">Remove from Favorite Lists</string>

    <string name="about">About</string>
    <string name="myFavortie">Favorite</string>





        <!-- EditText hint -->
         <string name="edit_text_hint">Enter the number of questions</string>
        <!-- Button labels -->
        <string name="music">Music</string>
        <string name="geography">Geography</string>
         <string name="submit_button_label">Submit</string>
         <string name="name_of_player">Player Name</string>
        <string name="total_score">Score</string>



</resources>