<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlightFavorites">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favAirline"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/titleFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titleFavorite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/titleFavorite"
        app:layout_constraintEnd_toStartOf="@+id/titleFavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleFavorite"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/favAirline"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:text="@string/airline"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFavorite" />

    <TextView
        android:id="@+id/favFlightNumber"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/fNumber"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/favAirline"
        app:layout_constraintStart_toEndOf="@+id/favAirline"
        app:layout_constraintTop_toTopOf="@+id/favAirline" />

    <TextView
        android:id="@+id/favArrival"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/arrAirport"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/favAirline"
        app:layout_constraintStart_toEndOf="@+id/favFlightNumber"
        app:layout_constraintTop_toTopOf="@+id/favAirline" />

    <TextView
        android:id="@+id/favStatus"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/fStatus"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/favAirline"
        app:layout_constraintStart_toEndOf="@+id/favArrival"
        app:layout_constraintTop_toTopOf="@+id/favAirline" />

    <TextView
        android:id="@+id/favDepartureTime"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/depTime"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/favAirline"
        app:layout_constraintStart_toEndOf="@+id/favStatus"
        app:layout_constraintTop_toTopOf="@+id/favAirline" />

    <TextView
        android:id="@+id/favArrivalTime"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/arrTime"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/favAirline"
        app:layout_constraintStart_toEndOf="@+id/favDepartureTime"
        app:layout_constraintTop_toTopOf="@+id/favAirline" />

    <FrameLayout
        android:id="@+id/fraFavoriteLocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/recycleView"
        app:layout_constraintTop_toTopOf="@+id/recycleView" />

</androidx.constraintlayout.widget.ConstraintLayout>