<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    tools:context=".Activities.TriviaActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/triviatool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@color/backg"
        android:hint="Trivia"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/rl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rl1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="30dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/backg"
        app:boxStrokeColor="#4CAF50"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triviatool">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="#673AB7"
            android:textSize="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="30dp"
        android:background="@color/wrongAnswer"
        android:text="@string/music"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="10dp"
        android:text="@string/geography"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/leaderboard_button"
        android:layout_width="57dp"
        android:layout_height="70dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="75dp"
        android:clickable="true"
        android:rotation="0"
        android:rotationX="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="@drawable/locked" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_button"
        android:layout_width="52dp"
        android:layout_height="66dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        android:clickable="true"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/triviatool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

</androidx.constraintlayout.widget.ConstraintLayout>